--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,11 @@
 rootProject.name = "moviefun"
 
 include "applications:movie-fun-app"
-
 include "components:albums"
 include "components:movies"
+include "components:blobstore"
+include "components:movie-fun-api"
+include "components:album-api"
+include "applications:album-service"
+include "applications:movie-service"
+include "components:service-credentials"
